Various:  - NOTE: re-com.css has changed. Please update!  - Cleanup      - Moved batch files to bin folder.      - Moved miscellaneous doc files to docs folder.      - Removed FRP.cljs.  - Made popover more responsive. All aspects can be modified dynamically now.  - Fixed popover bug when body height changed with :left/right-above/center positioning.  - Found a non-absolute positioned solution for input-text icons to prevent overlapping issues.  - Converted popover and dropp-down from using :render to using :component-function in (reagent/create-class).  - Updated figwheel-setup.md.  - Started looking at code in reagent-notes.md.  - Got a resolution for the lein 1.0.4 build, so using that now.  - Moved compiler output into a compiled folder.  - Combined demo and demofig builds into a single demo build (allowed removal of duplicated resources folders).  - Updated static module to use w3schools.com/xml/cd_catalog.xml instead of static.day8.com.au/locations.xml.  - Vowed to never again go this long without a checkin.

--- a/run/resources/public/resources/css/re-com.css
+++ b/run/resources/public/resources/css/re-com.css
@@ -513,7 +513,11 @@
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 6px rgba(245, 124, 0, 0.6);
 }
 
-.has-warning .form-control-feedback {
+.has-warning .form-control-feedback { /* TODO: REMOVE */
+  color: #f57c00;
+}
+
+.rc-input-text .md-warning {
   color: #f57c00;
 }
 
@@ -526,7 +530,11 @@
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 6px rgba(213, 0, 0, 0.6);
 }
 
-.has-error .form-control-feedback {
+.has-error .form-control-feedback { /* TODO: REMOVE */
+  color: #d50000;
+}
+
+.rc-input-text .md-error {
   color: #d50000;
 }
 
